Issue #12 - Dropdown list shifts other DOM elements down

--- a/src/css/_styles.scss
+++ b/src/css/_styles.scss
@@ -1,6 +1,7 @@
 
 .container {
 	
+	position: relative;
 	
 	> .current {
 		
@@ -17,6 +18,8 @@
 	
 	
 	> .ddlist {
+		
+		position: absolute;
 		
 		display: none;
 		z-index: 100;
